--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     let current = 0;
     let selected = [];
 
+<!--
     async function startGame() {
       const age = document.getElementById('age').value;
       const topic = document.getElementById('topic').value;
@@ -92,6 +93,35 @@
       document.getElementById('endMessage').style.display = 'none';
       showQuestion();
     }
+-->
+
+async function startGame() {
+  const age = document.getElementById('age').value;
+  const topic = document.getElementById('topic').value;
+  console.log("Kiválasztott korosztály:", age);
+  console.log("Kiválasztott témakör:", topic);
+
+  const { data, error } = await supabase
+    .from('questions')
+    .select('*')
+    .eq('age_group', age)
+    .eq('topic', topic);
+
+  console.log("Lekért adatok:", data);
+  console.log("Hiba:", error);
+
+  if (error || !data || data.length === 0) {
+    alert('Ehhez a kategóriához még nincsenek kérdések.');
+    return;
+  }
+
+  selected = data;
+  current = 0;
+  document.getElementById('game').style.display = 'block';
+  document.getElementById('endMessage').style.display = 'none';
+  showQuestion();
+}
+
 
 
     function showQuestion() {
